--- a/index.html
+++ b/index.html
@@ -4,24 +4,19 @@
   <title>Search Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="search">
+<body class="body">
   <div class="container">
-    <div class="Title">
-        We know the <br> way to <span style="color:#007bff; display: inline;">Success</span>
+    <div class="title-class">
+        <h1>We know the <br> way to <span style="color:#0057FE; display: inline;">Success</span></h1>
       </div>
       
-    <p class="note">Growing A Business Means Having The Right Data In Your Packet</p>
-    <div class="input-group">
-        <div class="search-container">
-            <input type="text" placeholder="Search company name..." class="search-input">
+    <p class="note-class">Growing A Business Means Having The Right Data In Your Packet</p>
+    <div class="search-container">
+        <div class="search-input">
+            <input type="text" placeholder="Search company name..." class="search-class">
           </div>          
-      <button onclick="redirectToOtherPage()" class="search-button" >Search</button>
+          <a href="DataTable.html" class="search-button">Search</a>
     </div>
   </div>
 </body>
 </html>
-<script>
-    function redirectToOtherPage() {
-  window.location.href = 'DataTable.html';
-}
-    </script>
