--- a/DataTable.html
+++ b/DataTable.html
@@ -11,49 +11,49 @@
             <th colspan="3">DATA</th>
         </tr>
         <tr>
-            <td class="bd-color"># Name</td>
-            <td class="bd-color"><input type="date" class="input-date" ></td>
-            <td class="bd-color"><input type="date" class="input-date" ></td>
+            <td class="header-bg-color"># Name</td>
+            <td class="header-bg-color"><input type="date" class="input-date" ></td>
+            <td class="header-bg-color"><input type="date" class="input-date" ></td>
         </tr>
         <tr>
             <td>minorityInterest</td>
-            <td><div class="green"><span>1.15B</span></div></td>
-            <td><div class="red"><span>665M</span></div></td>
+            <td><div class="green-arrow-plus"><span>1.15B</span></div></td>
+            <td><div class="red-arrow-minus"><span>665M</span></div></td>
         </tr>
         <tr>
             <td>netincome</td>
-            <td><div class="green"><span>1.45B</span></div></td>
-            <td><div class="green"><span>1.49B</span></div></td>
+            <td><div class="green-arrow-plus"><span>1.45B</span></div></td>
+            <td><div class="green-arrow-plus"><span>1.49B</span></div></td>
         </tr>
         <tr>
             <td>sellingGeneralAdministrative</td>
-            <td><div class="green"><span>721M</span></div></td>
-            <td><div class="red"><span>862M</span></div></td>
+            <td><div class="green-arrow-plus"><span>721M</span></div></td>
+            <td><div class="red-arrow-minus"><span>862M</span></div></td>
         </tr>
         <tr>
             <td>grossProfit</td>
-            <td><div class="red"><span>27M</span></div></td>
-            <td><div class="red"><span>27</span></div></td>
+            <td><div class="red-arrow-minus"><span>27M</span></div></td>
+            <td><div class="red-arrow-minus"><span>27</span></div></td>
         </tr>
         <tr>
             <td>ebit</td>
-            <td><div class="green"><span>1.15B</span></div></td>
-            <td><div class="red"><span>665M</span></div></td>
+            <td><div class="green-arrow-plus"><span>1.15B</span></div></td>
+            <td><div class="red-arrow-minus"><span>665M</span></div></td>
         </tr>
         <tr>
             <td>operatingIncome</td>
-            <td><div class="green"><span>1.45B</span></div></td>
-            <td><div class="green"><span>1.49B</span></div></td>
+            <td><div class="green-arrow-plus"><span>1.45B</span></div></td>
+            <td><div class="green-arrow-plus"><span>1.49B</span></div></td>
         </tr>
         <tr>
             <td>otherOperatingExpenses</td>
-            <td><div class="red"><span>721M</span></div></td>
-            <td><div class="red"><span>862M</span></div></td>
+            <td><div class="red-arrow-minus"><span>721M</span></div></td>
+            <td><div class="red-arrow-minus"><span>862M</span></div></td>
         </tr>
         <tr>
             <td>interestExpenses</td>
-            <td><div class="green"><span>27M</span></div></td>
-            <td><div class="green"><span>27M</span></div></td>
+            <td><div class="green-arrow-plus"><span>27M</span></div></td>
+            <td><div class="green-arrow-plus"><span>27M</span></div></td>
         </tr>
       
     </table>
@@ -93,7 +93,7 @@
                 Tesla, Inc. designs, develops, manufactures, leases, and sells electric vehicles, and energy generation and storage
                 systems in the United States, China, and internationally.
                 <br>
-                The Automotive segment offers electric vehicles, as well as sells automotive regulatory credits; and non-warranty
+                The Automotive segment offers electric vehicles, as well as sells automotive regulatory cred-arrow-minusits; and non-warranty
                 after-sales vehicle, used vehicles, retail merchandise, and vehicle insurance services. 
                 It operates in two segments, Automotive, and Energy Generation / Storage
                 <br>
@@ -109,7 +109,7 @@
                 financing options to its solar customers.
                 <br>
                 The company was formerly known as Tesla Motors, Inc. and changed its name to Tesla, Inc. in February 2017. Tesla, Inc.
-                was incorporated in 2003 and is headquartered in Austin, Texas.
+                was incorporated in 2003 and is headquartered-arrow-minus in Austin, Texas.
                 <br>
             </td>
         </tr>
@@ -180,7 +180,7 @@
         <tr>
             <td ><b>1. Innovative Products: </b>     Tesla is known for its cutting-edge electric vehicles and energy generation and storage systems, 
                 which have gained significant popularity in the market.<br>
-                <b>2. Strong Financial Performance:</b> The company has consistently delivered strong financial results, with a return per asset of 10.43% and a return per capital of 27.99%.
+                <b>2. Strong Financial Performance:</b> The company has consistently delivered-arrow-minus strong financial results, with a return per asset of 10.43% and a return per capital of 27.99%.
                 <br><b>3. Brand Reputation:</b> Tesla has established a strong brand reputation for its high-quality and environmentally friendly products, attracting a loyal customer base.
                 <br><b></b>4. Technological Advancements: Tesla's continuous focus on technological advancements gives it a competitive edge in the industry.
                 <br><b>Weaknesses</b>
